--- a/src/app/lista-pacientes/lista-pacientes.page.html
+++ b/src/app/lista-pacientes/lista-pacientes.page.html
@@ -8,5 +8,25 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
 
+    <ion-item-sliding *ngFor="let paciente of pacientes">
+      <ion-item href="/dados-detail/{{paciente.id}}/">
+        {{paciente.nome}}
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="excluir(paciente)">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+  </ion-list>
+
+  <ion-fab (click)="modal()" class="button-native" vertical="bottom" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
