--- a/src/app/dados-detail/dados-detail.page.html
+++ b/src/app/dados-detail/dados-detail.page.html
@@ -2,8 +2,16 @@
   <ion-toolbar>
     <ion-title>DadosDetail</ion-title>
   </ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-button href="/home">Voltar</ion-button>
+  </ion-buttons>
 </ion-header>
 
-<ion-content>
 
+<ion-content>
+  <h3>Nome: {{paciente.nome}} </h3>
+  <h3>Data de nascimento: {{paciente.dt_nasc}}</h3>
+  <h3>Sexo: {{paciente.sexo}}</h3>
+  <h3>Idade: {{paciente.idade}}</h3>
+  <h3>Id: {{paciente.id}}</h3>
 </ion-content>
